Implemented WebView for Desktop.